--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ li {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+  color: var(--black);
+}
+
 :root {
   --white: #fff;
   --light-white: #fafafa;
@@ -445,6 +450,12 @@ nav .bottom button img {
 .settings .container ul li img {
   fill: var(--green) !important;
 }
+.settings .container text {
+  text-decoration: none;
+  text-align: center;
+  color: var(--medium-black);
+  font-size: 0.7rem;
+}
 
 .profile-edit {
   width: 100%;
@@ -576,4 +587,60 @@ nav .bottom button img {
 }
 .logout .container .btns button:last-child {
   background-color: var(--light-red);
+}
+
+.language {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  transition: 0.5s;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.2);
+}
+.language .container {
+  width: 400px;
+  padding: 15px;
+  background-color: var(--white);
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  z-index: 999;
+}
+.language .container .top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+}
+.language .container .top p {
+  flex: 1;
+}
+.language .container .top img {
+  cursor: pointer;
+}
+.language .container .top img:last-child {
+  width: 12px;
+}
+.language .container .bottom ul li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+.language .container .bottom ul li:hover {
+  background-color: var(--light-black);
+}
+.language .container .bottom ul li img {
+  fill: var(--green) !important;
+  display: none;
 }/*# sourceMappingURL=style.css.map */
