--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ nav .bottom button img {
 }
 .messages .bottom .user {
   display: flex;
+  justify-content: space-between;
   gap: 10px;
   padding: 10px 20px;
   transition: 0.5s;
