--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ a{
   color:var(--black);
 }
 
-:root {
+:root{
   --white: #fff;
   --light-white: #fafafa;
   --black: #000;
@@ -132,6 +132,7 @@ nav {
     }
     .user {
       display: flex;
+      justify-content: space-between;
       gap: 10px;
       padding: 10px 20px;
       transition: 0.5s;
