--- a/style.scss
+++ b/style.scss
@@ -155,6 +155,7 @@ nav {
 
       .center {
         width: 250px;
+        flex: 1;
         .name {
           display: flex;
           align-items: center;
@@ -235,6 +236,9 @@ nav {
     display: flex;
     justify-content: space-between;
 
+    .chat-back{
+      display: none;
+    }
     .left {
       display: flex;
       gap: 10px;
@@ -471,6 +475,20 @@ nav {
       }
     }
     ul{
+      .logout{
+        a{
+          color:var(--light-red);
+        }
+        svg{
+          width: 18px;
+          path{
+            stroke: var(--light-red);
+          }
+        }
+        &:hover{
+          background-color: rgba(248, 0, 0, 0.2);
+        }
+      }
       li{
         display: flex;
         align-items: center;
@@ -479,6 +497,10 @@ nav {
         cursor: pointer;
         border-radius: 5px;
         transition: 0.3s;
+        justify-content: space-between;
+        p{
+          flex: 1;
+        }
 
         &:hover{
           background-color: var(--light-black);
