--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ nav .bottom button img {
 }
 .messages .bottom .user .center {
   width: 250px;
+  flex: 1;
 }
 .messages .bottom .user .center .name {
   display: flex;
@@ -218,6 +219,9 @@ nav .bottom button img {
   padding: 10px;
   display: flex;
   justify-content: space-between;
+}
+.chat .chat-navbar .chat-back {
+  display: none;
 }
 .chat .chat-navbar .left {
   display: flex;
@@ -436,6 +440,18 @@ nav .bottom button img {
   text-decoration: underline;
   cursor: pointer;
 }
+.settings .container ul .logout a {
+  color: var(--light-red);
+}
+.settings .container ul .logout svg {
+  width: 18px;
+}
+.settings .container ul .logout svg path {
+  stroke: var(--light-red);
+}
+.settings .container ul .logout:hover {
+  background-color: rgba(248, 0, 0, 0.2);
+}
 .settings .container ul li {
   display: flex;
   align-items: center;
@@ -444,6 +460,10 @@ nav .bottom button img {
   cursor: pointer;
   border-radius: 5px;
   transition: 0.3s;
+  justify-content: space-between;
+}
+.settings .container ul li p {
+  flex: 1;
 }
 .settings .container ul li:hover {
   background-color: var(--light-black);
